# policy-engine

./: .gcloudignore  .npmignore  Cargo.toml  Dockerfile  README.md  RUST_CRATE_REPORT.md  package.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: publish.yml
.swarm/: state.json
deploy/: cloudbuild.yaml
examples/contexts/: evaluation-context.json
policy-engine-benchmarks/: COMPLIANCE_REPORT.md  Cargo.toml
policy-engine-benchmarks/benches/: cache_performance.rs  policy_evaluation.rs
policy-engine-benchmarks/benchmarks/output/: summary.md
policy-engine-benchmarks/benchmarks/output/raw/: .gitkeep
policy-engine-benchmarks/src/: lib.rs
policy-engine-benchmarks/src/adapters/: bridge.rs  condition_parsing.rs  decision_tree.rs  mod.rs  policy_bundle.rs  policy_evaluation.rs
policy-engine-benchmarks/src/benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
services/llm-costops/: .env.example  Dockerfile  package.json
services/llm-costops/deploy/: DEPLOYMENT_CHECKLIST.md  cli-commands.md  cloudbuild.yaml  iam-setup.sh  service.yaml
services/llm-costops/src/: index.ts
src/: config.rs  error.rs  index.ts  lib.rs
src/agents/: index.ts
src/agents/approval-routing/: agent.ts  handler.ts  index.ts
src/agents/constraint-solver/: agent.ts  handler.ts  index.ts
src/agents/contracts/: approval-routing.ts  constraint-solver.ts  decision-event.ts  index.ts
src/agents/policy-enforcement/: agent.ts  handler.ts  index.ts
src/api/: context.rs  decision.rs  engine.rs  mod.rs  server.ts
src/api/routes/: agents.ts  approval-routing.ts  constraint-solver.ts  evaluations.ts  internal-evaluate.ts  policies.ts
src/cache/: mod.rs
src/cli/: index.ts
src/commands/: agent.ts  approval-routing.ts  index.ts
src/core/: evaluator.rs  mod.rs
src/core/engine/: policy-engine.ts
src/core/primitives/: cost-calculator.ts  pii-detector.ts  token-counter.ts
src/daemon/: main.rs
src/db/: migrate.ts
src/execution/: context.ts  errors.ts  executor.ts  index.ts  middleware.ts  spans.ts  types.ts
src/execution/__tests__/: executor.test.ts  middleware.test.ts  spans.test.ts
src/functions/: handler.ts  policy-handlers.ts
src/integration/: client.rs  costops.rs  edge_agent.rs  governance.rs  incident_manager.rs  mod.rs  sentinel.rs  shield.rs
src/integrations/config-manager/: client.ts  index.ts
src/observability/: tracing.ts
src/policy/: action.rs  condition.rs  decision.rs  document.rs  metadata.rs  mod.rs  rule.rs
src/security/: agentics-identity.ts  audit-trail.ts  index.ts  metrics.ts  policy-governance.ts  rate-limiter.ts  versioned-policy-repository.ts
src/synthesis/: builder.ts  index.ts  types.ts
src/telemetry/: mod.rs
src/test/: setup.ts
src/types/: config.ts
src/utils/: config.ts
(+23 files in other folders)
