[package]
name = "policy-engine-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["LLM Policy Engine Team"]
license = "MIT OR Apache-2.0"
description = "Canonical benchmark suite for Policy Engine - compatible with the 25 benchmark-target repositories"
repository = "https://github.com/llm-policy-engine/policy-engine-benchmarks"
keywords = ["benchmark", "policy-engine", "performance", "llm"]

[lib]
name = "policy_engine_benchmarks"
path = "src/lib.rs"

[[bin]]
name = "run_benchmarks"
path = "src/bin/run_benchmarks.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full", "process"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# UUID for unique identifiers
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true

[profile.bench]
inherits = "release"

[[bench]]
name = "policy_evaluation"
harness = false

[[bench]]
name = "cache_performance"
harness = false
