[package]
name = "policy-engine-benchmarks"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical benchmark suite for Policy Engine - compatible with the 25 benchmark-target repositories"
keywords = ["benchmark", "policy-engine", "performance", "llm"]

[lib]
name = "policy_engine_benchmarks"
path = "src/lib.rs"

[[bin]]
name = "run_benchmarks"
path = "src/bin/run_benchmarks.rs"

[dependencies]
# Main policy engine crate (workspace sibling)
llm-policy-engine = { path = ".." }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["process"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true

[profile.bench]
inherits = "release"

[[bench]]
name = "policy_evaluation"
harness = false

[[bench]]
name = "cache_performance"
harness = false
